# keybr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml
libs/: argh.h
libs/sqlite_database/: CMakeLists.txt
libs/sqlite_database/src/: sqlite_database.cpp
src/: anki_client.cpp  anki_client.h  app.cpp  app.h  app_screen.cpp  app_screen.h  appwindow.cpp  appwindow.h  average.h  color_scheme.cpp  color_scheme.h  config.cpp  config.h  curl_request.cpp  curl_request.h  deck.cpp  deck.h  global.h  main.cpp  main_window.cpp  main_window.h  phrase.cpp  phrase.h  sqlite_database.cpp  sqlite_database.h  trainer.cpp  trainer.h  trainer_data.cpp  trainer_data.h  translation_window.cpp  translation_window.h
src/utility/: anki_client.h  average.h  curl_request.cpp  curl_request.h  speech_engine.cpp  speech_engine.h  speech_engine_mac.cpp  speech_engine_none.cpp  sqlite_database.cpp  sqlite_database.h  tools.cpp  tools.h  utf8_tools.cpp  utf8_tools.h
